Revert "FIX https://github.com/OpenIdentityPlatform/OpenDJ/issues/136 OPENDJ_JAVA_ARGS="${OPENDJ_JAVA_ARGS} --illegal-access=permit""
This reverts commit b8cf330ec6fe1cadd6e81bf88eae6c1860de9a36.